--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build-dev",
-    "build-dev": "webpack -d && webpack-dev-server --content-base dist --inline --hot",
+    "build-dev": "webpack && webpack-dev-server --content-base dist --inline --hot",
     "build-prod": "webpack -p && webpack-dev-server --content-base dist --inline"
   },
   "author": "",
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "randomstring": "^1.1.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   }
