--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "axios": "^0.18.0",
     "randomstring": "^1.1.5",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2"
   }
 }
